# dailyclaw

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: creating-plugins.md
docs/plans/: 2026-04-14-wiki-redesign-plan.md
docs/specs/: 2026-04-14-wiki-redesign-design.md
docs/superpowers/plans/: 2026-04-03-dailyclaw-p1-p3.md  (+2 more)
src/: config.py  main.py  main_locale.py
src/adapters/: __init__.py  locale.py  telegram.py
src/bot/: commands.py  handlers.py
src/core/: __init__.py  bot.py  context.py  db.py  intent_router.py  intent_router_locale.py  llm.py  plugin.py  rate_limit.py  retry.py  scheduler.py
src/core/i18n/: __init__.py  (+1 more)
src/journal/: engine.py  scheduler.py  summary.py
src/llm/: client.py
src/planner/: reminder.py  scheduler.py
src/plugins/: __init__.py
src/sharing/: generator.py
src/storage/: db.py  models.py
src/templates/: share.html
tests/: conftest.py  test_integration.py  test_integration_commands.py  test_journal_engine.py  test_planner_reminder.py  test_sharing_generator.py  test_summary.py  test_vision.py
tests/test_core/: test_bot.py  test_config.py  test_db.py  test_i18n.py  test_intent_router.py  test_llm.py  test_plugin.py  test_rate_limit.py  test_retry.py  test_scheduler.py  test_telegram_adapter.py
tests/test_plugins/: test_journal.py  test_memo.py  test_planner.py  test_recorder.py  test_reflect.py  test_sharing.py  test_track.py  test_wiki.py
(+60 files in other folders)
